# shuangpin

./: .gitignore  CMakeLists.txt  README.md  install.sh  uninstall.sh
src/: plasma-krunner-shuangpin.json  shuangpin.cpp  shuangpin.h  shuangpin_runner.cpp  shuangpin_runner.h
